# vclibpy

./: .coveragerc  .gitignore  .gitlab-ci.yml  CHANGELOG.md  LICENSE  README.md  pylintrc  pyproject.toml  requirements.txt  setup.cfg  setup.py
docs/: Makefile  index.html
docs/jupyter_notebooks/: e1_refrigerant_data.ipynb  e2_compressor.ipynb  e3_inputs_and_flowsheet_state.ipynb  e4_heat_exchanger.ipynb  e5_expansion_valve.ipynb  e6_simple_heat_pump.ipynb  e7_vapor_injection.ipynb  e8_compressor_model.ipynb
docs/source/: Contribution.md  conf.py
examples/: converter.toml  e1_refrigerant_data.py  e21_compressor_screw.py  e21_compressor_screw_brute_force.py  e22_Plots.py  e2_compressor.py  e3_inputs_and_flowsheet_state.py  e4_heat_exchanger.py  e5_expansion_valve.py  e6_simple_heat_pump.py  e6a_simple_heat_pump_transcritical.py  e7_vapor_injection.py  e8_flowsheet_selection.py  e_23test.py
examples/data/: coefficients_2.xlsx
tests/: test_datamodels.py  test_examples.py  test_regression.py
vclibpy/: __init__.py  datamodels.py  heat_pumps.py
vclibpy/algorithms/: __init__.py  base.py  fsolve.py  iteration.py
vclibpy/components/: component.py  phase_separator.py
vclibpy/flowsheets/: __init__.py  base.py  ihx.py  internal_heat_exchanger.py  openFlt.py  standard.py  standardTC.py  standard_transcritical.py  vapor_injection.py  vapor_injection_economizer.py  vapor_injection_phase_separator.py  vi_2stage.py  vi_q2stage_eco.py  vi_q2stage_flt.py  vi_quasi2stage.py
vclibpy/media/: __init__.py  cool_prop.py  lubricant_media.py  media.py  oil_mix_prop.py  states.py  (+1 more)
(+1178 files in other folders)
