[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "vclibpy"
authors = [
    { name = "Fabian Wuellhorst", email = "fabian.wuellhorst@eonerc.rwth-aachen.de" },
    { name = "Julian Moentenich", email = "julian.moentenich@eonerc.rwth-aachen.de" },
    { name = "Christoph Hoeges", email = "christoph.hoeges@eonerc.rwth-aachen.de" },
    { name = "Sebastian Ostlender", email = "sebastian.ostlender@eonerc.rwth-aachen.de" }
]
description = "Package with functions for the vapor compression process designusing steady state simulation models"
readme = "README.md"
requires-python = ">=3.7"
keywords = [
    "vapor-compression", "heat pumps",
    "chillers", "steady-state simulation"
]
license = { text = "BSD-3-Clause" }
classifiers = [
    'Development Status :: 3 - Alpha',
    'Topic :: Scientific/Engineering/Education',
    'Intended Audience :: Science/Research',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
]
dependencies = [
    'numpy',
    'coolprop',
    'matplotlib',
    'pandas',
    'sdf',
    'ctREFPROP'
]
dynamic = ["version"]

[package.urls]
homepage = "https://github.com/RWTH-EBC/vclibpy"
documentation = "https://github.com/RWTH-EBC/vclibpy"
